Настроил корректное создание пользователя. Осталось разобраться с edit.